--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js" charset="utf-8"></script>
 <script src="js/kv-apartments.js"></script>
 
+<form>
+    <select id="part_of_city">
+    </select>
+
+    <select id="apartment_state">
+    </select>
+
+</form>
 
 
 </body>
