--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
     <select id="apartment_state">
     </select>
 
+    <p>Üldpind:</p>
+    <input id="total_area" class="narrow_numeric" type="number" min="0" autocomplete="off">
+    <p>m<sup>2</sup></p>
+
+    <p>Tube:</p>
+    <input id="num_rooms_min" class="narrow_numeric" type="number" min="0">
+    <p>kuni</p>
+    <input id="num_rooms_max" class="narrow_numeric" type="number" min="0">
+
+    <p>Korrus:</p>
+    <input id="num_floor" class="narrow_numeric" type="number" min="0">
+    <p>Korruseid:</p>
+    <input id="num_floors_total" class="narrow_numeric" type="number" min="0">
+
+
 </form>
 
 
