remove bootstrap and fix #7

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/kv-apartments.css"/>
 </head>
 <body>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js" charset="utf-8"></script>
 <script src="js/kv-apartments.js"></script>
 
@@ -31,9 +32,10 @@
     <input id="num_floors_total" class="narrow_numeric" type="number" min="0">
 
     <button type="button" id="submit_form">Näita</button>
-
-
 </form>
+<div id="alert">
+    <span id="message">Kõik korras</span>
+</div>
 
 
 </body>
