--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <script src="js/kv-apartments.js"></script>
 
 <form action="">
-    <select id="part_of_city">
+    <select id="part_of_city" style="min-width: 100px;">
     </select>
 
-    <select id="apartment_state">
+    <select id="apartment_state" style="min-width: 140px;">
     </select>
 
     <p>Üldpind:</p>
@@ -35,6 +35,13 @@
 </form>
 <div id="alert">
     <span id="message">Kõik korras</span>
+</div>
+
+<svg></svg>
+
+<div id="info">
+    <p>Keskmine hind: <span id="mean">250</span>€</p>
+    <p>Mediaanhind: <span id="median">260</span>€</p>
 </div>
 
 
