--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <p>Üldpind:</p>
     <input id="total_area" class="narrow_numeric" type="number" min="0" autocomplete="off">
-    <p>m<sup>2</sup> (+- 20%)</p>
+    <p>m<sup>2</sup> &plusmn; 20%</p>
 
     <p>Tube:</p>
     <input id="num_rooms_min" class="narrow_numeric" type="number" min="0">
