--- a/index.html
+++ b/index.html
@@ -11,28 +11,41 @@
 <script src="js/kv-apartments.js"></script>
 
 <form action="">
+    <div class="unit">
     <select id="part_of_city" style="min-width: 100px;">
     </select>
+    </div>
 
+    <div class="unit">
     <select id="apartment_state" style="min-width: 140px;">
     </select>
+    </div>
 
+    <div class="unit">
     <p>Üldpind:</p>
     <input id="total_area" class="narrow_numeric" type="number" min="0" autocomplete="off">
     <p>m<sup>2</sup> &plusmn; 20%</p>
+    </div>
 
+    <div class="unit">
     <p>Tube:</p>
     <input id="num_rooms_min" class="narrow_numeric" type="number" min="0">
     <p>kuni</p>
     <input id="num_rooms_max" class="narrow_numeric" type="number" min="0">
+    </div>
 
+    <div class="unit">
     <p>Korrus:</p>
     <input id="num_floor" class="narrow_numeric" type="number" min="0">
     <p>Korruseid:</p>
     <input id="num_floors_total" class="narrow_numeric" type="number" min="0">
+    </div>
 
+    <div class="unit">
     <button type="button" id="submit_form">Näita</button>
+    </div>
 </form>
+
 <div id="alert">
     <span id="message">Kõik korras</span>
 </div>
