--- a/index.html
+++ b/index.html
@@ -53,9 +53,25 @@
 <svg></svg>
 
 <div id="info">
-    <p>Keskmine hind: <span id="mean">250</span>€</p>
-    <p>Mediaanhind: <span id="median">260</span>€</p>
+    <p>Keskmine hind: <span id="mean">0</span>€</p>
+    <p>Mediaanhind: <span id="median">0</span>€</p>
 </div>
+
+<table id="samples">
+    <thead>
+    <th>Kuulutuse ID</th>
+    <th>Hind*, €</th>
+    <th>Linnaosa</th>
+    <th>Üldpind, m&sup2;</th>
+    <th>Seisukord</th>
+    <th>Tube</th>
+    <th>Korrus/korruseid</th>
+
+
+    </thead>
+    <tbody>
+    </tbody>
+</table>
 
 
 </body>
