--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/kv-apartments.css"/>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
+
 </head>
 <body>
 
