--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/kv-apartments.css"/>
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
+    <link rel="stylesheet" type="text/css" href="css/pace.css"/>
 
 </head>
 <body>
 
+<script src="js/pace.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js" charset="utf-8"></script>
 <script src="js/kv-apartments.js"></script>
 
