--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 <svg></svg>
 
 <div id="info">
-    <p>Keskmine hind: <span id="mean">0</span>€</p>
-    <p>Mediaanhind: <span id="median">0</span>€</p>
+    <p id="mean">Keskmine hind: <span id="mean">0</span>€</p>
+    <p id="median">Mediaanhind: <span id="median">0</span>€</p>
 </div>
 
 <table id="samples">
