--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="unit">
-        <button type="button" id="submit_form" class="pure-button pure-button-primary">Näita</button>
+        <button type="button" id="submit_form" class="pure-button pure-button-primary blue-button">Näita</button>
         </div>
     </form>
 </div>
