--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" type="text/css" href="css/pace.css"/>
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+    <!--[if lte IE 8]>
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
+    <!--<![endif]-->
     <link rel="stylesheet" type="text/css" href="css/kv-apartments.css"/>
 
 </head>
@@ -14,40 +20,42 @@
 <script src="js/pace.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js" charset="utf-8"></script>
 <script src="js/kv-apartments.js"></script>
-<div class="pure-u-1">
+<div>
     <form action="" class="pure-form">
-        <div class="unit">
-        <select id="part_of_city" style="min-width: 100px;">
-        </select>
-        </div>
+        <div class="pure-g">
+            <div class="unit pure-u-1 pure-u-sm-1-3 pure-u-md-1-3 pure-u-lg-1-5 pure-u-xl-1-12">
+            <select id="part_of_city" style="min-width: 100px;">
+            </select>
+            </div>
 
-        <div class="unit">
-        <select id="apartment_state" style="min-width: 140px;">
-        </select>
-        </div>
+            <div class="unit pure-u-1 pure-u-sm-1-3 pure-u-md-1-3 pure-u-lg-1-5 pure-u-xl-1-8">
+            <select id="apartment_state" style="min-width: 140px;">
+            </select>
+            </div>
 
-        <div class="unit">
-        <p>Üldpind:</p>
-        <input id="total_area" class="narrow_numeric" type="number" min="0" autocomplete="off">
-        <p>m<sup>2</sup> &plusmn; 20%</p>
-        </div>
+            <div class="unit pure-u-1 pure-u-sm-1-3 pure-u-md-1-3 pure-u-lg-1-5 pure-u-xl-1-8">
+            <p>Üldpind:</p>
+            <input id="total_area" class="narrow_numeric" type="number" min="0" autocomplete="off">
+            <p>m<sup>2</sup> &plusmn; 20%</p>
+            </div>
 
-        <div class="unit">
-        <p>Tube:</p>
-        <input id="num_rooms_min" class="narrow_numeric" type="number" min="0">
-        <p>kuni</p>
-        <input id="num_rooms_max" class="narrow_numeric" type="number" min="0">
-        </div>
+            <div class="unit pure-u-1 pure-u-sm-1-3 pure-u-md-1-3 pure-u-lg-1-5 pure-u-xl-1-8">
+            <p>Tube:</p>
+            <input id="num_rooms_min" class="narrow_numeric" type="number" min="0">
+            <p>kuni</p>
+            <input id="num_rooms_max" class="narrow_numeric" type="number" min="0">
+            </div>
 
-        <div class="unit">
-        <p>Korrus:</p>
-        <input id="num_floor" class="narrow_numeric" type="number" min="0">
-        <p>Korruseid:</p>
-        <input id="num_floors_total" class="narrow_numeric" type="number" min="0">
-        </div>
+            <div class="unit pure-u-1 pure-u-sm-1-3 pure-u-md-1-3 pure-u-lg-1-5 pure-u-xl-1-8">
+            <p>Korrus:</p>
+            <input id="num_floor" class="narrow_numeric" type="number" min="0">
+            <p>/</p>
+            <input id="num_floors_total" class="narrow_numeric" type="number" min="0">
+            </div>
 
-        <div class="unit">
-        <button type="button" id="submit_form" class="pure-button pure-button-primary blue-button">Näita</button>
+            <div class="unit pure-u-1-2 pure-u-sm-1-3 pure-u-md-1-3  pure-u-lg-1-5 pure-u-xl-1-12">
+            <button type="button" id="submit_form" class="pure-button pure-button-primary blue-button">Näita</button>
+            </div>
         </div>
     </form>
 </div>
