--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
 
 <script src="js/pace.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js" charset="utf-8"></script>
+<script src="js/jszip.min.js"></script>
+<script type="text/javascript" src="js/jszip-utils.min.js"></script>
+<!--
+Mandatory in IE 6, 7, 8 and 9.
+-->
+<!--[if IE]>
+<script type="text/javascript" src="js/jszip-utils-ie.min.js"></script>
+<![endif]-->
 <script src="js/kv-apartments.js"></script>
+
+
+
 <div>
     <form action="" class="pure-form">
         <div class="pure-g">
@@ -75,7 +86,6 @@
     </div>
 </div>
 
-<div class="pure-u-1">
 <table id="samples" class="pure-table">
     <thead>
     <th>Kuulutuse ID</th>
@@ -91,7 +101,6 @@
     <tbody>
     </tbody>
 </table>
-<div class="pure-u-1">
 
 
 </body>
