--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <form action="" class="pure-form">
         <div class="pure-g">
             <div class="unit pure-u-1-2 pure-u-sm-1-3 pure-u-md-1-3 pure-u-lg-1-5 pure-u-xl-1-12">
+                <select id="type_of_ad" style="min-width: 100px;">
+                </select>
+            </div>
+
+            <div class="unit pure-u-1-2 pure-u-sm-1-3 pure-u-md-1-3 pure-u-lg-1-5 pure-u-xl-1-12">
             <select id="part_of_city" style="min-width: 100px;">
             </select>
             </div>
